cabal-version:      2.4
name:               expr-parser
version:            0.1.0.0
synopsis:           Expression parser with factorial and symbolic differentiation
description:        A parser for mathematical expressions supporting factorial and symbolic differentiation using Parsec.
license:            MIT
author:             Your Name
maintainer:         your.email@example.com
category:           Language
build-type:         Simple

executable expr-parser
    main-is:          Main.hs
    other-modules:
        ExprParser

    build-depends:    base
                    , parsec ^>=3.1
                    , containers
    hs-source-dirs:   .
    default-language: Haskell2010
    ghc-options:      -Wall
